fix: UsernamePrompt hiding a bit on small screens

--- a/src/client/Chat.css
+++ b/src/client/Chat.css
@@ -15,9 +15,7 @@
   align-items: center;
   flex-wrap: wrap;
   box-sizing: border-box;
-  min-height: 0;
   margin: 0;
-  padding: 0;
   background: var(--black-5);
 }
 
@@ -49,9 +47,9 @@
 }
 
 .header .title {
-  margin: 0;
+  margin: 10px 0;
   flex-grow: 1;
   margin-right: 50px;
-  padding: 10px 15px;
+  margin-left: 15px;
   font-size: 2em;
 }
